--- a/cfgs/deit_gradual_fusion_rnt100_stage1.yaml
+++ b/cfgs/deit_gradual_fusion_rnt100_stage1.yaml
@@ -57,7 +57,7 @@ max_lr: 0.01
 reset_scheduler: False
 
 # Training parameters
-gpus: [0,]
+gpus: [3, 5, 6, 7]
 
 ckpt_dir: '/data/datasets/research-datasets/ckpt_dir'
 ckpt_full_path: null 
@@ -65,7 +65,7 @@ ckpt_full_path: null
 batch_size: 26
 num_epochs: 40
 print_freq: 50
-model_name: 'deit_gradual_fusion'
+model_name: 'deit_vanilla_fusion'
 trainer_name: 'trainer_rgbn_triplet'
 verbose: True # Setting for printing more information
 max_rank: 50 # Max number of ranks to calculate cmc and mAP
@@ -75,8 +75,8 @@ n_trials: 1 # Number of trials for optuna
 use_wandb: True
 wandb_project: 'mm-mafia-reid-new-mAP'
 study_name: 'deit-rnt100-clean-code-test'
-wandb_run_name: 'initial-test'
-wandb_trial_name: 'initial-test'
+wandb_run_name: 'gradual-fusion-rnt100-stage1'
+wandb_trial_name: 'gradual-fusion-rnt100-stage1'
 
 hyperparams:
   lr:
