--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,24 @@
-aiohttp==3.8.5
-aiosignal==1.3.1
-alembic==1.11.1
+alembic==1.11.3
 annotated-types==0.5.0
 anyio==3.7.1
 appdirs==1.4.4
 arrow==1.2.3
-async-timeout==4.0.2
-attrs==23.1.0
 backoff==2.2.1
 beautifulsoup4==4.12.2
 blessed==1.20.0
-blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
-click==8.1.6
+click==8.1.7
 cmaes==0.10.0
-cmake==3.27.0
+cmake==3.27.4
 colorlog==6.7.0
-contourpy==1.1.0
 croniter==1.4.1
-cycler==0.11.0
 dateutils==0.6.12
 deepdiff==6.3.1
 docker-pycreds==0.4.0
-exceptiongroup==1.1.2
-fastapi==0.100.1
+exceptiongroup==1.1.3
+fastapi==0.103.0
 filelock==3.12.2
-flake8==6.1.0
-Flask==2.3.2
-fonttools==4.41.1
-frozenlist==1.4.0
 fsspec==2023.6.0
 gitdb==4.0.10
 GitPython==3.1.32
@@ -38,13 +27,12 @@ h11==0.14.0
 huggingface-hub==0.16.4
 idna==3.4
 importlib-metadata==6.8.0
-importlib-resources==6.0.0
+importlib-resources==6.0.1
 inquirer==3.1.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
-joblib==1.3.1
-kiwisolver==1.4.4
-lightning==2.0.6
+joblib==1.3.2
+lightning==2.0.7
 lightning-cloud==0.5.37
 lightning-utilities==0.9.0
 lit==16.0.6
@@ -52,11 +40,8 @@ llvmlite==0.40.1
 Mako==1.2.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
-matplotlib==3.7.2
-mccabe==0.7.0
 mdurl==0.1.2
 mpmath==1.3.0
-multidict==6.0.4
 networkx==3.1
 numba==0.57.1
 numpy==1.24.4
@@ -71,71 +56,62 @@ nvidia-cusolver-cu11==11.4.0.1
 nvidia-cusparse-cu11==11.7.4.91
 nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
-optuna==3.2.0
+optuna==3.3.0
 ordered-set==4.1.0
 packaging==23.1
 pandas==2.0.3
 pathtools==0.1.2
 Pillow==10.0.0
-platformdirs==3.10.0
-plotly==5.15.0
-protobuf==4.23.4
+plotly==5.16.1
+protobuf==4.24.2
 psutil==5.9.5
-pycodestyle==2.11.0
-pydantic==2.0.3
-pydantic-core==2.3.0
-pyflakes==3.1.0
-Pygments==2.15.1
+pydantic==2.1.1
+pydantic-core==2.4.0
+Pygments==2.16.1
 PyJWT==2.8.0
 pynndescent==0.5.10
-pynvml==11.5.0
-pyparsing==3.0.9
 python-dateutil==2.8.2
 python-editor==1.0.4
 python-multipart==0.0.6
-pytorch-lightning==2.0.6
+pytorch-lightning==2.0.7
 pytz==2023.3
 PyYAML==6.0.1
 readchar==4.0.5
-redis==4.6.0
-regex==2023.6.3
+regex==2023.8.8
 requests==2.31.0
-rich==13.5.0
-safetensors==0.3.1
+rich==13.5.2
+safetensors==0.3.3
 scikit-learn==1.3.0
 scipy==1.10.1
-sentry-sdk==1.28.1
+sentry-sdk==1.29.2
 setproctitle==1.3.2
 six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.4.1
-SQLAlchemy==2.0.19
-starlette==0.31.0
+SQLAlchemy==2.0.20
+starlette==0.31.1
 starsessions==1.3.0
 sympy==1.12
-tenacity==8.2.2
+tenacity==8.2.3
 threadpoolctl==3.2.0
+timm==0.9.5
 tokenizers==0.13.3
-tomli==2.0.1
 torch==2.0.1
-torchmetrics==1.0.1
+torchmetrics==1.1.0
 torchvision==0.15.2
-tqdm==4.65.0
+tqdm==4.66.1
 traitlets==5.9.0
-transformers==4.32.0.dev0
+transformers==4.33.0.dev0
 triton==2.0.0
 typing-extensions==4.7.1
 tzdata==2023.3
 umap==0.1.1
 umap-learn==0.5.3
 urllib3==2.0.4
-uvicorn==0.23.1
-wandb==0.15.7
+uvicorn==0.23.2
+wandb==0.15.8
 wcwidth==0.2.6
-websocket-client==1.6.1
+websocket-client==1.6.2
 websockets==11.0.3
-Werkzeug==2.3.6
-yapf==0.40.1
-yarl==1.9.2
 zipp==3.16.2
