--- a/cfgs/deit_gradual_fusion_rn300_stage2-for-luke.yaml
+++ b/cfgs/deit_gradual_fusion_rn300_stage2-for-luke.yaml
@@ -2,13 +2,13 @@
 use_optuna: True
 train_stage: 2  
 output_dir: '/data/datasets/research-datasets/output_dir'
-seed: 508926194
+seed: 906579864
 phase: 'train'
 
 # Dataset parameters
 dataroot: '/data/datasets/research-datasets'
-dataset: 'reid_mm/RGBNT100'
-dataset_name: 'RGBNT100'
+dataset: 'reid_mm/RGBN300'
+dataset_name: 'RGBN300'
 
 input_size: [224, 224] # 224 normally, 384 for larger deit
 
@@ -20,16 +20,16 @@ resize_max: 1.0 # only if data_augmentation is True
 augment_type: 'random_erasure' # Optional: "random_erasure"
 train_ratio: 0.8 # use 80% of the data for training and 20% for validation
 image_num_for_reid_validate: 25 # Default 25
-num_triplet_samples: 8 # Default 1
+num_triplet_samples: 10 # Default 1
 
 # Model parameters 
-model_modalities: ['R', 'N', 'T']
+model_modalities: ['R', 'N']
 model_num_cls_tokens: 0
 model_num_fusion_tokens: 1
 model_num_heads: 8
 vit_embed_dim: 768 # 384 for dino, 768 normally
-model_decoder_output_class_num: 50 # change this when changing datasets
-model_fusion_combos: 'dfd'
+model_decoder_output_class_num: 150 # change this when changing datasets
+model_fusion_combos: 'ffd'
 model_lrnable_fusion_avg: False
 data_token_step: 0
 pretrained_model: "distilled-224"
@@ -46,10 +46,10 @@ label_smoothing: 0.1
 
 # Optimizer parameters
 optimizer: 'adamw'
-lr: 0.0000057433
-weight_decay: 0.001303446
-beta1: 0.8363999
-beta2: 0.978528
+lr: 0.000005
+weight_decay: 0.0001583726
+beta1: 0.759165
+beta2: 0.986436
 lr_scheduler_name: '' # Different from stage 1
 warmup_steps: 500
 max_lr: 0.01
@@ -59,18 +59,10 @@ reset_scheduler: False
 gpus: [0, 1, 2, 3, 4, 5, 6, 7]
 
 ckpt_dir: '/data/datasets/research-datasets/ckpt_dir'
-ckpt_full_path: '/data/datasets/research-datasets/ckpt_dir/20230829-113503-deit-rnt100-augmented-triplet/best.pth'
+ckpt_full_path: '/data/datasets/research-datasets/ckpt_dir/20230828-051758-deit-rn300-hpo/best.pth'
 
-# dff: /data/datasets/research-datasets/ckpt_dir/20230829-115305-deit-rnt100-augmented-triplet/best.pth
-# ddf: /data/datasets/research-datasets/ckpt_dir/20230829-114354-deit-rnt100-augmented-triplet/best.pth
-# dfd: /data/datasets/research-datasets/ckpt_dir/20230829-113503-deit-rnt100-augmented-triplet/best.pth
-# fdf: /data/datasets/research-datasets/ckpt_dir/20230829-112804-deit-rnt100-augmented-triplet/best.pth
-# ddd: /data/datasets/research-datasets/ckpt_dir/20230829-111752-deit-rnt100-augmented-triplet/best.pth
-# fdd: /data/datasets/research-datasets/ckpt_dir/20230829-111638-deit-rnt100-augmented-triplet/best.pth
-# fff: /data/datasets/research-datasets/ckpt_dir/20230829-105537-deit-rnt100-augmented-triplet/best.pth
-
-batch_size: 26
-num_epochs: 50
+batch_size: 32
+num_epochs: 60
 print_freq: 50
 model_name: "deit_gradual_fusion"
 trainer_name: "trainer_rgbn_triplet"
@@ -81,27 +73,26 @@ n_trials: 1 # Number of trials for optuna
 # Weights and Biases Logging
 use_wandb: True
 wandb_project: 'mm-mafia-reid-new-mAP'
-study_name: 'rnt100-fusion_combo-ablation-stage2'
-wandb_run_name: 'stage2-dfd' 
-wandb_trial_name: 'stage2-dfd'  
-
+study_name: 'CHANGETHIS'
+wandb_run_name: 'CHANGETHIS'
+wandb_trial_name: 'CHANGETHIS'
 
 hyperparams:
   lr:
-    min: 0.0000057433
-    max: 00.0000057433
+    min: 0.000005
+    max: 0.000005
     type: loguniform
   weight_decay:
-    min: 0.001303446
-    max: 0.001303446
+    min: 0.0001583726
+    max: 0.0001583726
     type: loguniform
   beta1:
-    min: 0.8363999
-    max: 0.8363999
+    min: 0.759165
+    max: 0.759165
     type: float
   beta2:
-    min: 0.978528
-    max: 0.978528
+    min: 0.986436
+    max: 0.986436
     type: float
   model_num_cls_tokens: 
     min: 0
